# WriteMe

./: .dockerignore  .env  .eslintignore  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  components.json  docker-compose.yaml  drizzle.config.ts  nx.json  package.json  partykit.json  pnpm-lock.yaml  sst.config.ts  tsconfig.base.json  tsconfig.json
.github/ISSUE_TEMPLATE/: user-story.md
.github/lighthouse/: budget.json
.github/workflows/: docs-deployment.yaml  writeme-deployment.yaml  writeme-e2e-test.yaml  writeme-nt-testing.yaml  writeme-test.yaml
apps/writeme/: .eslintrc.json  auth.ts  jest.config.ts  middlewares.ts  next.config.js  package.json  pnpm-lock.yaml  (+5 more)
apps/writeme-docs/: docusaurus.config.js  project.json
apps/writeme-e2e/: playwright.config.ts  project.json
drizzle/: 0000_sloppy_angel.sql  0001_past_nemesis.sql  0002_workable_lily_hollister.sql  0003_steady_cassandra_nova.sql  0004_classy_franklin_richards.sql  0005_acoustic_boomerang.sql  0006_dizzy_shatterstar.sql  0006_gray_viper.sql  0006_tranquil_paper_doll.sql  0007_cynical_mikhail_rasputin.sql  0008_luxuriant_roulette.sql
ml-backend/: README.md  project.json  pyproject.toml
ml-backend/ml_backend/: main.py
ml-backend/ml_backend/app/: __init__.py  app.py
ml-backend/tests/: test_hello.py
party/: index.ts
wmc/: .eslintrc.json  README.md  package.json  project.json  tailwind.config.js  tsconfig.json  tsconfig.lib.json  tsconfig.storybook.json  vite.config.ts
wmc-utils/: .eslintrc.json  README.md  project.json  tsconfig.json
(+368 files in other folders)
